--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
     "daisyui": "^2.15.0",
+    "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
